upd: add more what if + change docs
